fix busqueda por categoria home